[gd_scene load_steps=7 format=3 uid="uid://d17knhs205d2j"]

[ext_resource type="Texture2D" uid="uid://d34klnsax6iey" path="res://Assets/dead.png" id="1_5g78x"]
[ext_resource type="Script" path="res://Scenes/NPC/shopkeeper.gd" id="1_84drj"]
[ext_resource type="Texture2D" uid="uid://cveuepe3a8kro" path="res://Assets/speech_bubble.png" id="3_ihvuq"]
[ext_resource type="FontFile" uid="uid://dg5ck0bgmm7yp" path="res://Assets/PixelifySans-Regular.ttf" id="4_7wmsv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_frhhb"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sq8yx"]
radius = 14.0
height = 32.0

[node name="shopkeeper" type="CharacterBody2D"]
script = ExtResource("1_84drj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5g78x")
hframes = 3
vframes = 4
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_frhhb")

[node name="interact" type="Area2D" parent="."]

[node name="interact_area" type="CollisionShape2D" parent="interact"]
shape = SubResource("CapsuleShape2D_sq8yx")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="text_box" type="MarginContainer" parent="."]
offset_left = 5.0
offset_top = -75.0
offset_right = 45.0
offset_bottom = -35.0
scale = Vector2(2.09234, 1.12133)

[node name="NinePatchRect" type="NinePatchRect" parent="text_box"]
layout_mode = 2
texture = ExtResource("3_ihvuq")
patch_margin_left = 5
patch_margin_top = 6
patch_margin_right = 5
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="text_box"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="text_box/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 0.596078, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7wmsv")
theme_override_font_sizes/font_size = 5
text = "GPT Response"
autowrap_mode = 2

[connection signal="area_entered" from="interact" to="." method="_on_interact_area_entered"]
[connection signal="area_exited" from="interact" to="." method="_on_interact_area_exited"]
